# livingai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  benchmark.py  benchmark_livingai.py  hyperscale_test_livingai.py  prod_test_livingai.py
docs/: README.md  adapters.md  api-reference.md  checkpointing.md  cli.md  concepts.md  migration.md  quickstart.md  recovery.md  replay.md
examples/: 01_basic_checkpoint.py  02_crash_recovery.py  03_mock_tools_debugging.py  04_cost_tracking.py  05_langgraph_agent.py  README.md
launch/: devto_article.md  hacker_news.md  reddit.md  social_posts.md
livingai/: __init__.py  __main__.py  checkpoint.py  cli.py  compression.py  graph.py  metrics.py  py.typed  recovery.py  replay.py
livingai/adapters/: __init__.py  _base.py  crewai.py  langgraph.py  openai_agents.py
livingai/storage/: __init__.py  sqlite_store.py
livingai/stores/: __init__.py  postgres.py  redis.py
showcase/: README.md  demo_langgraph_redis.py  langgraph_redis_saver.py
studio/: README.md  app.py  seed_demo.py
tests/: conftest.py  test_adapter.py  test_checkpoint.py  test_graph.py  test_more_adapters.py  test_postgres_store.py  test_recovery.py  test_redis_store.py  test_replay.py  test_sqlite_store.py  test_stress.py
