[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livingai"
version = "0.4.1"
description = "Checkpoint, recovery, and replay infrastructure for AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Living AI" }]
keywords = ["agents", "llm", "checkpoint", "recovery", "replay", "observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

# Zero runtime dependencies — the core uses only the standard library.
dependencies = []

[project.optional-dependencies]
redis    = ["redis>=4.2"]
postgres = ["asyncpg>=0.28"]
studio   = ["streamlit>=1.30"]
dev      = ["pytest>=7", "coverage>=7", "fakeredis", "redis>=4.2", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/livingai/livingai"
Repository = "https://github.com/livingai/livingai"
Documentation = "https://github.com/livingai/livingai#readme"

[project.scripts]
livingai = "livingai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["livingai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "strict"

[[tool.mypy.overrides]]
module = ["livingai.stores.redis", "livingai.stores.postgres", "livingai.stores"]
ignore_missing_imports = true
warn_unused_ignores = false
